--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
     <div class = 'container'>
         <h1 id = 'title'>HANGMAN</h1>
 
+        <div class='game'>
+          <h2>Start Game</h2>
+         
+      </div>
+
+
+
+
+
+
+
 
     </div>
 
