--- a/index.html
+++ b/index.html
@@ -1,61 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  
+
   <title>Word Guess Game</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="assets/css/style.css"/>
+  <link rel="stylesheet" href="assets/css/style.css" />
   <script src="assets/javascript/game.js" defer></script>
 </head>
+
 <body>
+
   <body>
-    <!--Main Heading-->
+
     <div class='title'>
-        <h1>Favorite Foods HANGMAN!</h1>
+
+      <h1>Favorite Foods HANGMAN!</h1>
+
     </div>
 
     <div class='background'>
-        <div class='container'>
-            <h2>Press Any Button To Start!</h2>
-            <div>
-                <img id='image' src='./assets/images/' width='40%' height='200'>
-            </div>
-
-            <!--Current Word Container-->
-            <div>
-                <h3 id='currentword'>_ _ _ _ _</h3>
-            </div>
-            <div id='scoreboard'>
-                <!--Guesses left Container-->
-                <div class='sidebar'>
-                    <h3>GUESSES LEFT:
-                        <span id="guessesleft"></span>
-                    </h3>
-                </div>
-
-                <!--Wins counter Container-->
-                <div class='sidebar'>
-                    <h3>WINS:
-                        <span id='winscounter'></span>
-                    </h3>
-                </div>
-                <!--Loss counter Container-->
-                <div class='sidebar'>
-                    <h3>LOSSES:
-                        <span id="loss"></span>
-                    </h3>
-                </div>
-
-                <!--Wrong guesses container-->
-                <div class='sidebar'>
-                    <h3>LETTERS YOU GUESSED WRONG:
-                        <span id="playerguesses"></span>
-                    </h3>
-                </div>
-            </div>
+      <div class='container'>
+        <h2>Press Any Button To Start!</h2>
+        <div>
+          <img id='image' src='./assets/images/gordon2.jpg' width='40%' height='400'>
         </div>
+
+        <div>
+          <h3 id='currentword'>_ _ _ _ _</h3>
+        </div>
+        <div id='scoreboard'>
+
+          <div class='sidebar'>
+            <h3>GUESSES LEFT:
+              <span id="guessesleft"></span>
+            </h3>
+          </div>
+
+          <div class='sidebar'>
+            <h3>WINS:
+              <span id='winscounter'></span>
+            </h3>
+          </div>
+
+          <br>
+
+          <div class='sidebar'>
+            <h3>LOSSES:
+              <span id="loss"></span>
+            </h3>
+          </div>
+
+          <br>
+
+          <div class='sidebar'>
+            <h3>WRONG LETTERS:
+              <span id='playerguesses'></span>
+            </h3>
+
+            <audio controls autoplay>
+              <source src="assets/audio/Stir Fry.mp3" type="audio/mpeg">
+            </audio>
+
+          </div>
+        </div>
+      </div>
     </div>
 
-</body>
+  </body>
+
 </html>
