--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Word Guess Game</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="assets/css/style.css" />
+  <link rel="stylesheet" href="assets/css/reset.css" />
   <script src="assets/javascript/game.js" defer></script>
 </head>
 
